# iris

./: .gitignore  Cargo.toml  Dockerfile  HEADER  README.md  docker-compose.yml  iris.json  parachain-chainspec.json  swarm.key
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: check.yml
docs/: ipfs_rpc_ref.md  rust-setup.md
docs/diagrams/: data_ingestion_ejection.drawio  election_pallet_breakdown.drawio  encryption.drawio  iris_protocol.drawio  sketch.drawio
node/: Cargo.toml  build.rs
node/src/: chain_spec.rs  cli.rs  command.rs  command_helper.rs  lib.rs  main.rs  rpc.rs  service.rs
offchain-client/: Cargo.toml  README.md
offchain-client/src/: interface.rs  lib.rs
pallets/assets/: Cargo.toml  README.md
pallets/assets/src/: benchmarking.rs  extra_mutator.rs  functions.rs  impl_fungibles.rs  impl_stored_map.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/authorities/: Cargo.toml  README.md
pallets/authorities/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
pallets/authorization/: Cargo.toml  README.md
pallets/authorization/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
pallets/common/: Cargo.toml
pallets/common/src/: lib.rs  test.rs
pallets/data-assets/: Cargo.toml  README.md
pallets/data-assets/rpc/: Cargo.toml
pallets/data-assets/rpc/runtime-api/: Cargo.toml
pallets/data-assets/src/: benchmarking.rs  encryption.rs  lib.rs  mock.rs  tests.rs
pallets/data-spaces/: Cargo.toml  README.md
pallets/data-spaces/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
pallets/elections/: Cargo.toml  README.md  node_elections.md
pallets/elections/src/: lib.rs  mock.rs  tests.rs
pallets/gateway/: Cargo.toml  README.md
pallets/gateway/src/: lib.rs  mock.rs  tests.rs
pallets/ipfs/: Cargo.toml  README.md
pallets/ipfs/common/: Cargo.toml
pallets/ipfs/common/src/: lib.rs
pallets/ipfs/rpc/: Cargo.toml  README.md
pallets/ipfs/rpc/runtime-api/: Cargo.toml
pallets/ipfs/rpc/runtime-api/src/: lib.rs
pallets/ipfs/rpc/src/: lib.rs
pallets/ipfs/src/: benchmarking.rs  ipfs.rs  ipfs_tests.rs  lib.rs  mock.rs  tests.rs
pallets/iris-assets/: Cargo.toml  README.md
pallets/iris-assets/rpc/: Cargo.toml
pallets/iris-assets/rpc/runtime-api/: Cargo.toml
pallets/iris-assets/rpc/runtime-api/src/: lib.rs
pallets/iris-assets/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
pallets/iris-ejection/: Cargo.toml  README.md
pallets/iris-ejection/src/: lib.rs  mock.rs  tests.rs
pallets/iris-ledger/: Cargo.toml  README.md
pallets/iris-ledger/src/: lib.rs  mock.rs  tests.rs
pallets/iris-proxy/: Cargo.toml  README.md
pallets/iris-proxy/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
pallets/iris-session/: Cargo.toml  README.md
pallets/iris-session/src/: lib.rs  mock.rs  tests.rs
pallets/ledger/: Cargo.toml  README.md
pallets/ledger/src/: lib.rs  mock.rs  tests.rs
pallets/proxy/: Cargo.toml  README.md
pallets/proxy/rpc/: Cargo.toml  README.md
pallets/proxy/rpc/runtime-api/: Cargo.toml  README.md
pallets/proxy/rpc/runtime-api/src/: lib.rs
pallets/proxy/rpc/src/: lib.rs
pallets/proxy/src/: lib.rs  mock.rs  node_elections.md  tests.rs
rpc/: Cargo.toml  README.md
rpc/runtime-api/: Cargo.toml
rpc/runtime-api/src/: lib.rs
rpc/src/: lib.rs
runtime/: Cargo.toml  build.rs
runtime/src/: lib.rs
scripts/: docker_run.sh  driemworks_docker_build.sh  generate_chain_spec.sh  init.sh  ipfs_setup.sh  iris.json  local.sh
