[package]
name = "offchain-client"
version = "1.0.0"
description = "The iris offchain client stand-in"
authors = ["Ideal Labs <https://github.com/ideal-lab5>"]
homepage = "https://idealabs.networks/"
edition = "2021"
license = "GPL-3.0-or-later"
publish = false
repository = "https://github.com/ideal-lab5/iris"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23" }

[features]
default = ['std']
std = [
    'sp-std/std'
]
