[package]
authors = ["Ideal Labs <https://github.com/ideal-lab5>"]
edition = '2021'
name = 'pallet-authorization'
version = "1.0.0"
license = "GPL-3.0-or-later"
homepage = "https://idealabs.networks/"
repository = "https://github.com/ideal-lab5/iris"
description = "FRAME pallet template for Data ejection and rule verification."
readme = "README.md"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

sp-io = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23" }
sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23" }
sp-core = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23" }
sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23" }

frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23" }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23", optional = true }

log = { version = "0.4.14", default-features = false }

pallet-assets = { version = "4.0.0-dev", path = "../assets", default-features = false }
pallet-authorities = { version = "1.0.0", default-features = false, path = "../authorities" }
pallet-data-assets = { version = "1.0.0", default-features = false, path = "../data-assets" }
pallet-balances = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
pallet-iris-proxy = { version = "1.0.0", default-features = false, path = "../iris-proxy" }

iris-primitives = { version = "1.0.0", default-features = false, path = "../common" }

[dev-dependencies]
rand_chacha = { version = "0.3.1", default-features = false }
generic-array = "0.14.6"
crypto_box = { version = "0.8.1", default-features = false, features = ["alloc"] }
pallet-session = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
pallet-vesting = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }

[features]
default = ['std']
std = [
	'codec/std',
	'scale-info/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
	'sp-io/std',
	'sp-std/std',
	'sp-runtime/std',
	'log/std',
	'pallet-assets/std',
	'pallet-authorities/std',
	'pallet-balances/std',
	'pallet-data-assets/std',
	'pallet-session/std',
	'pallet-vesting/std',
	'iris-primitives/std',
	'pallet-iris-proxy/std',
]

runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]
