[package]
authors = ["Ideal Labs <https://github.com/ideal-lab5>"]
edition = '2021'
name = 'pallet-ipfs'
version = "1.0.0"
license = "GPL-3.0-or-later"
homepage = "https://idealabs.networks/"
repository = "https://github.com/ideal-lab5/iris"
description = "FRAME pallet for IPFS integration"
readme = "README.md"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
futures = { version = "0.3.21", features = ["thread-pool"] }
lazy_static = "1.4.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

sp-io = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23" }
sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23" }
sp-core = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23" }
sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23" }
sp-staking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23" }

frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23" }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23", optional = true }

log = { version = "0.4.14", default-features = false }

pallet-im-online = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
pallet-session = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }

pallet-assets = { version = "4.0.0-dev", path = "../assets", default-features = false }
pallet-authorities = { version = "1.0.0", path = "../authorities", default-features = false }
pallet-authorization = { version = "1.0.0", default-features = false, path = "../authorization" }
pallet-data-assets = { version = "1.0.0", default-features = false, path = "../data-assets" }
pallet-gateway = { version = "1.0.0", default-features = false, path = "../gateway" }
pallet-iris-proxy = { version = "1.0.0", default-features = false, path = "../iris-proxy" }
iris-primitives = { version = "1.0.0", default-features = false, path = "../common" }


umbral-pre = { version = "0.5.2", default-features = false, features = ["serde-support"] }
# needed for umbral-pre
getrandom = { version = "0.2", default-features = false, features = ["js"] }
rand_chacha = { version = "0.3.1", default-features = false }
generic-array = "0.14.6"
crypto_box = { version = "0.8.1", default-features = false, features = ["alloc"] }

[dev-dependencies]
pallet-authorities = { version = "1.0.0", path = "../authorities", default-features = false }
pallet-balances = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
pallet-vesting = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sp-keystore = { version = "0.12.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23" }
frame-support-test = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }

[features]
default = ['std']
std = [
	'codec/std',
	'scale-info/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
	'sp-io/std',
	'sp-std/std',
	'sp-runtime/std',
	'sp-staking/std',
	'log/std',
	'pallet-authorities/std',
	'pallet-im-online/std',
	'pallet-session/std',
	'pallet-assets/std',
	'pallet-balances/std',
	'pallet-data-assets/std',
	'pallet-gateway/std',
	'pallet-authorization/std',
	'pallet-authorities/std',
	'pallet-vesting/std',
	'serde_json/std',
	'umbral-pre/std',
	'getrandom/std',
	'rand_chacha/std',
	'crypto_box/std',
]

runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]
