[package]
name = "encryption-rpc-runtime-api"
version = "1.0.0"
authors = ["Ideal Labs <https://github.com/ideal-lab5>"]
edition = "2021"
license = "GPL-3.0-or-later"
homepage = "https://idealabs.networks/"
repository = "https://github.com/ideal-lab5/iris"
description = "RPC runtime API for data ejection and ingestion"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }

sp-api = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23" }
sp-core = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23" }
sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23" }
sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23" }
scale-info = { version = "2.0.0", default-features = false, features = ["derive"] }

serde = { version = "1", features = ["derive"], optional = true }
iris-primitives = { version = "1.0.0", default-features = false, path = "../../pallets/common" }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-api/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	'serde',
]
