[package]
name = "pallet-ipfs-rpc"
version = "1.0.0"
authors = ["Ideal Labs Developers <https://github.com/ideal-lab5>"]
edition = "2021"
license = "GPL-3.0-or-later"
publish = false
repository = "https://github.com/ideal-lab5/iris/"
description = "RPC interface for data ingestion and ejection via proxy nodes."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
jsonrpsee = { version = "0.13.0", features = ["server", "macros"] }
serde = { version = "1", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.0.0" }
sp-api = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23" }
sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23" }
sp-blockchain = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23" }
sp-core = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23" }
sp-rpc = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23" }
sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23" }
pallet-ipfs-primitives = { version = "1.0.0", default-features = false, path = "../common" }
pallet-ipfs-rpc-runtime-api = { version = "1.0.0", path = "./runtime-api" }
